examples/shell_err_nested/expected.txt
error: nested shell interpolation `@{` is not allowed
  --> input:2:20
  |
2 | let bad = $ echo @{@{x}}
  |                    ^^
